chore: update for compatibility with jdk 1.8